# challenge-bank

./: .gitignore  CLAUDE.md  DEVELOPMENT.md  README.md  docker-compose.yml
.claude/skills/material-design/: README.md  SKILL.md  reference.md
.github/workflows/: ci.yml
.serena/: project.yml
backend/: .coverage  .dockerignore  .env.docker  .env.example  Dockerfile  add_notification_setup_column.py  auth.py  database.py  email_service.py  init_db.py  main.py  models.py  pyproject.toml  schemas.py
backend/.serena/memories/: analytics-phase1-implementation.md  development-progress.md
backend/docs/: LAMBDA_CONSOLE_SETUP.md  api-specification.md  tdd.md
backend/templates/: notification_email.html  notification_email.txt
backend/tests/: conftest.py  test_auth.py  test_challenges.py  test_challenges_detail.py  test_failures.py  test_failures_detail.py  test_notifications.py  test_stats.py
docs/: FRONTEND_REQUIREMENTS.md  analytics-improvement-plan.md
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/app/: layout.tsx
frontend/app/(dashboard)/: layout.tsx  page.tsx
frontend/components/dashboard/: CalendarHeatmap.tsx  ChallengeCard.tsx  ChartSkeleton.tsx  EmptyState.tsx  FailureCard.tsx  ScoreDistributionChart.tsx  StatsCard.tsx  WeeklyTrendChart.tsx
frontend/components/layout/: Header.tsx
frontend/components/notifications/: NotificationSetupBanner.tsx  NotificationSetupDialog.tsx
frontend/lib/api/: client.ts
frontend/lib/constants/: colors.ts
frontend/lib/context/: AuthContext.tsx
frontend/lib/types/: index.ts
(+19 files in other folders)
